# python-sigrok

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: build-libsigrok.yaml  push.yaml
firmware-build/: build.sh
mxe-build/: build.sh
mxe-build/contrib-mxe/: pyconfig.patch
src/sigrok/: __init__.py  bindings.py  lib.py  libsigrok.py  sigrok.py
src/sigrok/include/: fixes.h  stdarg.h
tasks/: __init__.py  common.py  dev.py  stubs.py
tests/: test_libsigrok.py  test_sigrok.py
