[project]
name = "sigrok"
version = "0.0.1"
authors = [
    { name = "Stefan Hoelzl", email = "stefan.hoelzl@posteo.de"},
]
description = "Python-API for libsigrok"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyclibrary>=0.2.2",
    "platformdirs>=4.3.7",
    "pkgconfig>=1.5.5; sys_platform != 'windows'",
]

[dependency-groups]
dev = [
    "ruff==0.11.2",
    "invoke==2.2.0",
    "pytest==8.3.5",
]

[tool.uv]
python-preference = "only-managed"
default-groups = "all"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # docstrings
    "D",
    # typing.Any used
    "ANN401",
    # missing trailing comma
    "COM812",
    # line to long handled by ruff format
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"src/sigrok/__init__.py" = [
    # imported but unused
    "F401",
    # from ... import *
    "F403",
]
"src/sigrok/bindings.pyi" = [
    # no CapWord convention
    "N801",
    # funtction name not lowercase
    "N802",
]
"tests/**" = [
    # assert used
    "S101",
]
"tasks/**" = [
    # print used
    "T201",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"