[project]
name = "sigrok"
dynamic = ["version"]
authors = [
    { name = "Stefan Hoelzl", email = "stefan.hoelzl@posteo.de"},
]
description = "Python-API for libsigrok"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pyclibrary>=0.2.2",
    "platformdirs>=4.3.7",
    "pkgconfig>=1.5.5",
    "typing-extensions>=4.13.2",
]

[project.urls]
Homepage = "https://github.com/stefanhoelzl/python-sigrok"
Repository = "https://github.com/stefanhoelzl/python-sigrok.git"

[dependency-groups]
dev = [
    "ruff==0.11.7",
    "invoke==2.2.0",
    "types-invoke==2.0.0.10",
    "pytest==8.3.5",
    "mypy==1.15.0",
]

[tool.uv]
python-preference = "only-managed"
default-groups = "all"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # docstrings
    "D",
    # typing.Any used
    "ANN401",
    # missing trailing comma
    "COM812",
    # line to long handled by ruff format
    "E501",
    # f-string literal as exception message
    "EM102",
    # long exception messages
    "TRY003",
]
[tool.ruff.lint.per-file-ignores]
"src/sigrok/__init__.py" = [
    # imported but unused
    "F401",
    # from ... import *
    "F403",
]
"src/sigrok/bindings.pyi" = [
    # no CapWord convention
    "N801",
    # funtction name not lowercase
    "N802",
]
"tests/**" = [
    # assert used
    "S101",
]
"tasks/**" = [
    # print used
    "T201",
]

[tool.mypy]
strict = true
exclude = [
    "mxe-build",
    "firmware-build",
]

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = [
    "hatchling==1.27.0",
    "uv-dynamic-versioning==0.7.0"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
format-jinja = '''
    {{ base }}
    {%- if distance > 0 -%} .post{{ timestamp }} {%- endif -%}
    {%- if dirty and env.get("CI") != "true" -%} +dirty {%- endif -%}
'''

[tool.hatch.build.targets.wheel]
artifacts = [
    "*.pyi",
    "*.dll",
    "*.h",
    "*.fw",
    "*.rbf",
]

[tool.uv.sources]
uv-dynamic-versioning = { git = "https://github.com/ninoseki/uv-dynamic-versioning", tag = "v0.8.0" }
